Changed About Title

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Keenan Goodwine">
   <meta name="description" content="This is my index page">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About</title>
+  <title>About Keenan Goodwine</title>
 </head>
 
 <header>
