Rework case study link to project page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </picture>
         <h3>Band Planner</h3>
         <p>Band Planner keeps your band and team on track, all in one convenient app</p>
-        <a href="https://www.goodwinedesign.com/band-planner-case-study">Case Study</a>
+        <a href="/Users/keenangoodwine/Documents/Portfolio Site (Keenan Goodwine)/portfolio-website/bandplanner.html">Case Study</a>
       </div>
     </div>
     <div>
