--- a/bandplanner.html
+++ b/bandplanner.html
@@ -23,47 +23,51 @@
 </header>
 
 <div>
-  <h2>Band Planner</h2>
+  <h2>
+    Band Planner
+  </h2>
+
   <picture>
-    <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-01.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-01.png" width="800" alt="Band Planner">
   </picture>
+
   <p>Band Planner keeps your band and team on track, all in one convenient app. Responsible for project conception, UX, and UI design.</p>
 </div>
 <div>
-  <h2>Case Study<h2>
-      <picture>
-        <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-02.png" width="800" alt="Band Planner">
-      </picture>
-      <picture>
-        <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-03.png" width="800" alt="Band Planner">
-      </picture>
-      <picture>
-        <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-04.png" width="800" alt="Band Planner">
-      </picture>
-      <picture>
-        <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-05.png" width="800" alt="Band Planner">
-      </picture>
-      <picture>
-        <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-06.png" width="800" alt="Band Planner">
-      </picture>
-      <picture>
-        <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-07.png" width="800" alt="Band Planner">
-      </picture>
-      <picture>
-        <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-08.png" width="800" alt="Band Planner">
-      </picture>
-      <picture>
-        <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-09.png" width="800" alt="Band Planner">
-      </picture>
-      <picture>
-        <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-10.png" width="800" alt="Band Planner">
-      </picture>
-      <picture>
-        <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-11.png" width="800" alt="Band Planner">
-      </picture>
-      <picture>
-        <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-12.png" width="800" alt="Band Planner">
-      </picture>
+  <h2>Case Study</h2>
+  <picture>
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-02.png" width="800" alt="Band Planner">
+  </picture>
+  <picture>
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-03.png" width="800" alt="Band Planner">
+  </picture>
+  <picture>
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-04.png" alt="Band Planner">
+  </picture>
+  <picture>
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-05.png" width="800" alt="Band Planner">
+  </picture>
+  <picture>
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-06.png" width="800" alt="Band Planner">
+  </picture>
+  <picture>
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-07.png" width="800" alt="Band Planner">
+  </picture>
+  <picture>
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-08.png" width="800" alt="Band Planner">
+  </picture>
+  <picture>
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-09.png" width="800" alt="Band Planner">
+  </picture>
+  <picture>
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-10.png" width="800" alt="Band Planner">
+  </picture>
+  <picture>
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-11.png" width="800" alt="Band Planner">
+  </picture>
+  <picture>
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-12.png" width="800" alt="Band Planner">
+  </picture>
 </div>
 
 
