Change img width

--- a/bandplanner.html
+++ b/bandplanner.html
@@ -42,7 +42,7 @@
     <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-03.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-04.png" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-04.png" width="800" alt="Band Planner">
   </picture>
   <picture>
     <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-05.png" width="800" alt="Band Planner">
