Change img names

--- a/bandplanner.html
+++ b/bandplanner.html
@@ -28,7 +28,7 @@
   </h2>
 
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-01.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-01.png" width="800" alt="Band Planner">
   </picture>
 
   <p>Band Planner keeps your band and team on track, all in one convenient app. Responsible for project conception, UX, and UI design.</p>
@@ -36,37 +36,37 @@
 <div>
   <h2>Case Study</h2>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-02.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-02.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-03.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-03.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-04.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-04.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-05.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-05.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-06.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-06.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-07.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-07.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-08.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-08.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-09.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-09.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-10.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-10.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-11.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-11.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio%20Site%20(Keenan%20Goodwine)/portfolio-website/img/Band%20Planner%20Images%20for%20Portfolio/Band%20Planner%20Project%20Analysis%20Revised-12.png" width="800" alt="Band Planner">
+    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-12.png" width="800" alt="Band Planner">
   </picture>
 </div>
 
