Fix Error codes and img names

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
     <div>
       <div>
         <picture>
-          <img src="img/Band Planner Images for Portfolio/Band Planner Project Analysis Revised-01.png" width="800" alt="Band Planner">
+          <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-01.png" width="800" alt="Band Planner">
         </picture>
         <h3>Band Planner</h3>
         <p>Band Planner keeps your band and team on track, all in one convenient app</p>
-        <a href="/Users/keenangoodwine/Documents/Portfolio Site (Keenan Goodwine)/portfolio-website/bandplanner.html">Case Study</a>
+        <a href="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/bandplanner.html">Case Study</a>
       </div>
     </div>
     <div>
       <div>
         <picture>
-          <img src="img/Amplifi Images for Portfolio/Amplifi Project Screen.png" width="800" alt="Amplifi">
+          <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/AmplifiImagesforPortfolio/AmplifiProjectScreen.png" width="800" alt="Amplifi">
         </picture>
         <h3>Amplifi</h3>
         <p>Amplifi is a mobile and web app that allows musicians to purchase and re-sell used music gear.</p>
