--- a/about.html
+++ b/about.html
@@ -22,61 +22,65 @@
   </div>
 </header>
 
-<div>
+<main>
   <div>
-    <h1>About</h1>
-  </div>
-</div>
-
-<div>
-  <div>
-    <picture>
-      <img src="Files/KeenanGoodwineHeadshot.png" width="500">
-    </picture>
     <div>
-      <div>
-        <h2>My Story</h2>
-        <p>A creative at heart, seeking inspiration and inspiring others has driven my curiosity and creative skills. After years of developing my artistic abilities I started my own full-time design business. With a focus on animation and typography
-          I tackled any of my client’s design problems, including illustration, websites, merchandise, and branding. After three years of coming up with imaginative solutions for client’s design needs I wanted to expand my skill set, which led me to
-          obtaining a certification for UI from CareerFoundry. I’m looking for a home where my diverse skills and talents can continue to be inventive, turning ideas into products that are visually stunning and delightful to use. </p>
-        <a href="Files/Keenan_Goodwine_Resume.pdf" target="_blank"> Download my Resume</a>
-      </div>
-      <div>
-        <h2>Skills & Tools</h2>
-        <div>
-          <div>
-            <h3>Relevant Skills</h3>
-            <ul>UI/UX Design, Animation, Graphic Design, Branding, Illustration</ul>
-          </div>
-          <div>
-            <h3>Tools I Use</h3>
-            <ul>Figma, Sketch, Adobe XD, Adobe After Effects, Adobe Animate, Adobe Photoshop</ul>
-          </div>
-        </div>
-      </div>
+      <h1>About</h1>
     </div>
+  </div>
 
-
-    <footer id="contact">
+  <div>
+    <div>
+      <picture>
+        <img src="img/keenangoodwineheadshotforwebsite.png" alt=keenangoodwineheadshot width="400">
+      </picture>
       <div>
-        <h2>Get in Touch</h2>
-        <p>
-          Want to get in touch to make some unique designs together? Please send me an email below:
-        </p>
         <div>
-          <a href="mailto:goodwinedesign@gmail.com">Email me</a>
+          <h2>My Story</h2>
+          <p>A creative at heart, seeking inspiration and inspiring others has driven my curiosity and creative skills. After years of developing my artistic abilities I started my own full-time design business. With a focus on animation and
+            typography
+            I tackled any of my client’s design problems, including illustration, websites, merchandise, and branding. After three years of coming up with imaginative solutions for client’s design needs I wanted to expand my skill set, which led me
+            to
+            obtaining a certification for UI from CareerFoundry. I’m looking for a home where my diverse skills and talents can continue to be inventive, turning ideas into products that are visually stunning and delightful to use. </p>
+          <a href="Files/Keenan_Goodwine_Resume.pdf" target="_blank"> Download my Resume</a>
         </div>
         <div>
-          <a href="https://www.linkedin.com/in/keenangoodwine/" target="_blank">
-            <img src="http://via.placeholder.com/32x32" alt="LinkedIn">
-          </a>
-          <a href="https://www.youtube.com/watch?v=FgYgLt0PL-o&list=PLQWH6jFeU6gnOad8W_buGK9gLnbPKDAHe" target="_blank">
-            <img src="http://via.placeholder.com/32x32" alt="YouTube">
-          </a>
-          <a href="https://www.instagram.com/goodwinedesign/?hl=en">
-            <img src="http://via.placeholder.com/32x32" alt="Instagram">
-          </a>
+          <h2>Skills & Tools</h2>
+          <div>
+            <div>
+              <h3>Relevant Skills</h3>
+              <ul>UI/UX Design, Animation, Graphic Design, Branding, Illustration</ul>
+            </div>
+            <div>
+              <h3>Tools I Use</h3>
+              <ul>Figma, Sketch, Adobe XD, Adobe After Effects, Adobe Animate, Adobe Photoshop</ul>
+            </div>
+          </div>
         </div>
       </div>
-      <p>Copyright Keenan Goodwine 2022</p>
-    </footer>
+</main>
+
+
+<footer id="contact">
+  <div>
+    <h2>Get in Touch</h2>
+    <p>
+      Want to get in touch to make some unique designs together? Please send me an email below:
+    </p>
+    <div>
+      <a href="mailto:goodwinedesign@gmail.com">Email me</a>
+    </div>
+    <div>
+      <a href="https://www.linkedin.com/in/keenangoodwine/" target="_blank">
+        <img src="http://via.placeholder.com/32x32" alt="LinkedIn">
+      </a>
+      <a href="https://www.youtube.com/watch?v=FgYgLt0PL-o&list=PLQWH6jFeU6gnOad8W_buGK9gLnbPKDAHe" target="_blank">
+        <img src="http://via.placeholder.com/32x32" alt="YouTube">
+      </a>
+      <a href="https://www.instagram.com/goodwinedesign/?hl=en">
+        <img src="http://via.placeholder.com/32x32" alt="Instagram">
+      </a>
+    </div>
+  </div>
+  <p>Copyright Keenan Goodwine 2022</p>
+</footer>
