--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div>
       <div>
         <picture>
-          <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-01.png" width="800" alt="Band Planner">
+          <img src="BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-01.png" width="800" alt="Band Planner">
         </picture>
         <h3>Band Planner</h3>
         <p>Band Planner keeps your band and team on track, all in one convenient app</p>
