--- a/bandplanner.html
+++ b/bandplanner.html
@@ -22,6 +22,7 @@
   </div>
 </header>
 
+<main
 <div>
   <h2>
     Band Planner
@@ -69,6 +70,7 @@
     <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-12.png" width="800" alt="Band Planner">
   </picture>
 </div>
+</main>
 
 
 <footer id="contact">
