--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <main>
   <div>
     <div>
-      <h1>Welcome! My name is Keenan Goodwine!</h1>
+      <h1>Welcome! My name is Keenan Goodwine</h1>
       <p>I'm driven by turning ideas into products that are visually stunning and delightful to use.</p>
       <p>A creative at heart, seeking inspiration and inspiring others has driven my curiosity and creative skills.
         After years of developing my artistic abilities I started my own full-time design business. With a focus on
@@ -50,13 +50,13 @@
         </picture>
         <h3>Band Planner</h3>
         <p>Band Planner keeps your band and team on track, all in one convenient app</p>
-        <a href="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/bandplanner.html">Case Study</a>
+        <a href="../portfolio-website/bandplanner.html">Case Study</a>
       </div>
     </div>
     <div>
       <div>
         <picture>
-          <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/AmplifiImagesforPortfolio/AmplifiProjectScreen.png" width="800" alt="Amplifi">
+          <img src="../portfolio-website/img/AmplifiImagesforPortfolio/AmplifiProjectScreen.png" width="800" alt="Amplifi">
         </picture>
         <h3>Amplifi</h3>
         <p>Amplifi is a mobile and web app that allows musicians to purchase and re-sell used music gear.</p>
