Update footer icons

--- a/about.html
+++ b/about.html
@@ -72,13 +72,13 @@
     </div>
     <div>
       <a href="https://www.linkedin.com/in/keenangoodwine/" target="_blank">
-        <img src="http://via.placeholder.com/32x32" alt="LinkedIn">
+        <img src="../portfolio-website/img/LI-In-Bug.png" width="32" alt="LinkedIn">
       </a>
       <a href="https://www.youtube.com/watch?v=FgYgLt0PL-o&list=PLQWH6jFeU6gnOad8W_buGK9gLnbPKDAHe" target="_blank">
-        <img src="http://via.placeholder.com/32x32" alt="YouTube">
+        <img src="../portfolio-website/img/yt_icon_rgb.png" width="32" alt="YouTube">
       </a>
       <a href="https://www.instagram.com/goodwinedesign/?hl=en">
-        <img src="http://via.placeholder.com/32x32" alt="Instagram">
+        <img src="../portfolio-website/img/Instagram_Glyph_Gradient.png" width="32" alt="Instagram">
       </a>
     </div>
   </div>
