--- a/bandplanner.html
+++ b/bandplanner.html
@@ -29,7 +29,7 @@
   </h2>
 
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-01.png" width="800" alt="Band Planner">
+    <img src="../portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-01.png" width="800" alt="Band Planner">
   </picture>
 
   <p>Band Planner keeps your band and team on track, all in one convenient app. Responsible for project conception, UX, and UI design.</p>
@@ -37,37 +37,37 @@
 <div>
   <h2>Case Study</h2>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-02.png" width="800" alt="Band Planner">
+    <img src="../portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-02.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-03.png" width="800" alt="Band Planner">
+    <img src="../portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-03.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-04.png" width="800" alt="Band Planner">
+    <img src="../portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-04.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-05.png" width="800" alt="Band Planner">
+    <img src="../portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-05.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-06.png" width="800" alt="Band Planner">
+    <img src="../portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-06.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-07.png" width="800" alt="Band Planner">
+    <img src="../portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-07.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-08.png" width="800" alt="Band Planner">
+    <img src="../portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-08.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-09.png" width="800" alt="Band Planner">
+    <img src="../portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-09.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-10.png" width="800" alt="Band Planner">
+    <img src="../portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-10.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-11.png" width="800" alt="Band Planner">
+    <img src="../portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-11.png" width="800" alt="Band Planner">
   </picture>
   <picture>
-    <img src="/Users/keenangoodwine/Documents/Portfolio-Site-(Keenan-Goodwine)/portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-12.png" width="800" alt="Band Planner">
+    <img src="../portfolio-website/img/BandPlannerImagesforPortfolio/BandPlannerProjectAnalysisRevised-12.png" width="800" alt="Band Planner">
   </picture>
 </div>
 </main>
@@ -84,13 +84,13 @@
     </div>
     <div>
       <a href="https://www.linkedin.com/in/keenangoodwine/" target="_blank">
-        <img src="http://via.placeholder.com/32x32" alt="LinkedIn">
+        <img src="../portfolio-website/img/LI-In-Bug.png" width="32" alt="LinkedIn">
       </a>
       <a href="https://www.youtube.com/watch?v=FgYgLt0PL-o&list=PLQWH6jFeU6gnOad8W_buGK9gLnbPKDAHe" target="_blank">
-        <img src="http://via.placeholder.com/32x32" alt="YouTube">
+        <img src="../portfolio-website/img/yt_icon_rgb.png" width="32" alt="YouTube">
       </a>
       <a href="https://www.instagram.com/goodwinedesign/?hl=en">
-        <img src="http://via.placeholder.com/32x32" alt="Instagram">
+        <img src="../portfolio-website/img/Instagram_Glyph_Gradient.png" width="32" alt="Instagram">
       </a>
     </div>
   </div>
