--- a/bandplanner.html
+++ b/bandplanner.html
@@ -7,6 +7,8 @@
   <meta name="description" content="This is my index page">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Band Planner Case Study</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <header>
