--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Keenan Goodwine">
-  <meta name="description" content="This is my index page">
+  <meta name="description" content="Keenan Goodwine Portfolio Index">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Good Wine Design</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 </head>
 
 <header>
